--- a/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
@@ -4,8 +4,10 @@
 <th:block th:include="fragments/common_meta_title"></th:block>
 <th:block th:include="fragments/head"></th:block>
 <th:block th:include="fragments/common_css"></th:block>
-<link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
-<link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
+<link rel="stylesheet" type="text/css"
+	th:href="@{/resources/css/new_style.css}">
+<link rel="stylesheet" type="text/css"
+	th:href="@{/resources/css/buttonGroupFunction.css}">
 </head>
 <body
 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
@@ -17,27 +19,43 @@
 	<!-- END HEADER -->
 
 	<!-- BEGIN CONTENT -->
+	<div id="content-container">
+		<!-- Nội dung trang sẽ được cập nhật ở đây -->
+	</div>
 	<div class="container mt-4">
 		<div class="interact-day-group d-flex flex-row mb-3 w-50">
-			<label for="interaction-time" class="mr-4 w-25">Tương tác mới nhất
-				cách đây</label> <select class="form-select"
-				aria-label="Default select example">
-				<option selected>Chọn thời gian</option>
-				<option value="1">1 tuần</option>
-				<option value="2">2 tuần</option>
-				<option value="3">3 tuần</option>
+			<label for="interaction-time" class="mr-4 w-25">Tương tác mới
+				nhất cách đây</label> <select name="week" class="form-select"
+				id="interaction-weeks" onchange="selectChange()">
+				<option selected value="" th:selected="${param.week == 0}">Chọn
+					giá trị</option>
+				<option value="0" th:selected="${param.week == 0}">Tất cả</option>
+				<option value="1" th:selected="${param.week == 1}">1 tuần</option>
+				<option value="2" th:selected="${param.week == 2}">2 tuần</option>
+				<option value="3" th:selected="${param.week == 3}">3 tuần</option>
 			</select>
 		</div>
 
-		<!-- <div class="search-bar d-flex justify-content-end">
-			<input type="text" id="search-input"
-				class="form-control d-flex w-25 justify-content-end"
-				placeholder="Tìm kiếm">
-		</div> -->
+		<div class="search-bar d-flex justify-content-end mb-2">
+			<form id="frmSearchCustomer" action="interact" method="get">
+					<fieldset
+						class="form-group relative has-icon-left col-12 ">
+						<input class="form-control w-100" name="keyword" id="iconLeft"
+							type="text" placeholder="Tìm kiếm thông tin..."
+							onkeypress="handleKeyPress(event)">
+						<div class="form-control-position">
+							<i class="fa fa-search"></i>
+						</div>
+					</fieldset>
+				</form>
+			<!-- Thêm thẻ div này để hiển thị kết quả tìm kiếm -->
+			<div id="searchResults"></div>
+		</div>
 
 		<div class="table-container">
 			<div class="table-responsive">
-				<table id="table" class="table table-bordered table-striped table-hover">
+				<table id="table"
+					class="table table-bordered table-striped table-hover">
 					<thead class="thead">
 						<tr class="bg bg-success">
 							<th class="col-stt th1">STT</th>
@@ -58,8 +76,9 @@
 							<td
 								th:text="${customer.contactPerson != null ? customer.contactPerson : ''}"></td>
 							<td>
-								<div class="d-flex justify-content-center"> 
-									<a th:href="@{/customer/edit(id=${customer.id})}" class="text-info mr-3 bg-transparent" style="font-size: 20px;">
+								<div class="d-flex justify-content-center">
+									<a th:href="@{/customer/edit(id=${customer.id})}"
+										class="text-info mr-3 bg-transparent" style="font-size: 20px;">
 										<i class="fas fa-edit w-100"></i>
 									</a>
 								</div>
@@ -77,14 +96,19 @@
 	<!-- END CUSTOMIZE BUTTON -->
 
 </body>
-<script>new DataTable('#table');</script>
+<script type="text/javascript">
+	function selectChange() {
+		const week = document.getElementById("interaction-weeks").value;
+		const url = new URL(window.location.href);
+		url.searchParams.set('week', week);
+		window.location.href = url.toString();
+	}
+</script>
 <!-- START COMMON JAVASCRIPT -->
 <th:block th:include="fragments/common_javascript"></th:block>
 <!-- END COMMON JAVASCRIPT -->
 <script type="text/javascript"
+	src="resources/app-assets/js/update/search.js"></script>
+<script type="text/javascript"
 	th:src="@{/resources/app-assets/js/update/customerList_JS.js}"></script>
-<script type="text/javascript"
-	th:src="@{/resources/app-assets/js/update/customerList_Pagination.js}"></script>
-<script type="text/javascript"
-	th:src="@{/resources/app-assets/js/update/toggleCheckboxActions.js}"></script>
 </html>
