Edit name of screen Đơn hàng (Datatable)

--- a/web/src/main/webapp/WEB-INF/templates/fragments/orders/frg_datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/orders/frg_datatable.html
@@ -1,4 +1,4 @@
-Dann sách đơn hàng (Datatable)
+Danh sách đơn hàng (Datatable)
 <html xmlns:th="http://www.thymeleaf.org">
 
 <script th:inline="javascript">
