--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerDan.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerDan.html
@@ -56,16 +56,21 @@
 											<option 
 												th:value="${profession.id}"
 												th:text="${profession.name}"
-												th:selected="${profession.id == 3}"></option>
+												th:selected="${profession.id == 1}"></option>
 										</th:block>
+										
 					                </select>
+					                
 					            </div>
 					
 					            <div class="form-group">
 					                <label for="main_status">Trạng Thái Chính:</label>
 					                <select class="form-control" id="main_status" name="mainStatus" th:field="*{mainStatus}" required>
 					                    <option value="">Chọn Trạng Thái Chính</option>
-					                    <option th:each="status : ${statuses}" th:value="${status.id}" th:text="${status.name}"></option>
+										<th:block th:each="status : ${statuses}">
+											<option th:value="${status.id}" th:text="${status.name}"
+											th:selected="${status.id == 1}"></option>
+										</th:block>
 					                </select>
 					            </div>
 					
