--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -24,6 +24,7 @@
     <th:block th:include="fragments/hmenu"></th:block>
 	<!-- Header Section -->
  	<th:block th:include="fragments/home/sidebar"></th:block>
+ 	<th:block th:include="fragments/home/navbarforintro"></th:block>
  	
 	<!-- Thumbnail Carousel Section -->
 	<th:block th:include="fragments/home/content"></th:block>
