--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -68,7 +68,7 @@
 					</div>
 
 					<div class="actions">
-						<a th:href="@{editCustomer(id=${customer.id})}" >
+						<a th:href="@{newEditCustomer(id=${customer.id})}" >
 						    <button type="button"
 						    	style="cursor: pointer;">
 						    Edit
