--- a/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
@@ -5,15 +5,10 @@
 <th:block th:include="fragments/head"></th:block>
 <th:block th:include="fragments/common_css"></th:block>
 
-
-<link rel="stylesheet" type="text/css" href="resources/css/customerInteraction.css">
-
 <th:block th:include="fragments/head"></th:block>
 
-<link rel="stylesheet" type="text/css"
-	th:href="@{/resources/css/new_style.css}">
-<link rel="stylesheet" type="text/css"
-	th:href="@{/resources/css/buttonGroupFunction.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
 	
 </head>
 <body
