fix thêm ngày nhập và chức nưng nút "Quay lại"

--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerWithValue.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerWithValue.html
@@ -97,7 +97,9 @@
 									</div>
 
 									<button type="submit" class="btn btn-primary">Lưu Khách Hàng</button>
-									<button type="button" class="btn btn-secondary" onclick="goBack()">Quay Lại</button>
+									<a th:href = "@{/customer/list}">
+										<button type="button" class="btn btn-secondary">Quay Lại</button>
+									</a>
 								</form>
 							</div>
 						</div>
