Update nội dung content.html

--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/content.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/content.html
@@ -178,7 +178,7 @@
 				</div>
 				<!-- Khung nội dung bên phải -->
 				<div class="col-md-4 image-wrapper">
-					<h1 class="crm-title" style="color: #FFF">Quản Lý Mua Hàng
+					<h1 class="crm-title" style="color: #FFF">Quản Lý Đơn Hàng
 					</h1>
 					<img src="resources/Image/crm03.jpg" alt="imageCRM"
 						class="img-fluid img"><br>
