--- a/web/src/main/webapp/WEB-INF/templates/customer_list_son.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_son.html
@@ -53,7 +53,7 @@
 	
 	<!-- END HEADER  -->
 	
-	<div class="container mt-5">
+	<!-- <div class="container mt-5">
 		<button type="button" class="btn btn-primary fixed-button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" title="Tìm kiếm" style="border-radius: 50%; transition: all 0.3s ease; justify-content: center;align-items: center;">
   			<i class="bi bi-search"></i>
 		</button>
@@ -119,7 +119,7 @@
 		  </div>
 		</div>
 	
-	</div>
+	</div> -->
 	
 	 <th:block th:include="fragments/hmenu"></th:block>
 	<!-- BEGIN LEFT MENU NAVIGATION -->
